--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>calc</title>
+</head>
+<body>
+  <h1>计算器
+</h1>
+  <abc><a href="index.html">1</a></abc><abc><a>2</a></abc><abc><a>3</a></abc><abc><a>4</a></abc><abc><a>5</a></abc><abc><a>6</a></abc><abc><a>7</a></abc><abc><a>8</a></abc><abc><a>9</a></abc>
+  <abc><a href="index.html">确认</a></abc>
+  </body>
+</html>
