--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>计算器
 </h1>
-  <abc><a href="index.html">1</a></abc><abc><a>2</a></abc><abc><a>3</a></abc><abc><a>4</a></abc><abc><a>5</a></abc><abc><a>6</a></abc><abc><a>7</a></abc><abc><a>8</a></abc><abc><a>9</a></abc>
+  <abc><a href="index.html">1</a></abc><abc><a href="index.html">2</a></abc><abc><a href="index.html">3</a></abc><abc><a href="index.html">4</a></abc><abc><a href="index.html">5</a></abc><abc><a href="index.html">6</a></abc><abc><a href="index.html">7</a></abc><abc><a href="index.html">8</a></abc><a href="index.html"bc><a>9</a></abc>
   <abc><a href="index.html">确认</a></abc>
   </body>
 </html>
