--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calc</title>
+    <script src="index.js"></script>
+    <link href="index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <h1>计算器
