--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>计算器
 </h1>
-  <abc><a href="index.html">1</a></abc><abc><a href="index.html">2</a></abc><abc><a href="index.html">3</a></abc><abc><a href="index.html">4</a></abc><abc><a href="index.html">5</a></abc><abc><a href="index.html">6</a></abc><abc><a href="index.html">7</a></abc><abc><a href="index.html">8</a></abc><abc><a href="index.html">9</a></abc>
+  <abc><a href="#" onclick="Solve(1)">1</a></abc><abc><a href="#" onclick="Solve(2)">2</a></abc><abc><a href="#" onclick="Solve(3)">3</a></abc><abc><a href="#" onclick="Solve(4)">4</a></abc><abc><a href="#" onclick="Solve(5)">5</a></abc><abc><a href="#" onclick="Solve(6)">6</a></abc><abc><a href="#" onclick="Solve(7)">7</a></abc><abc><a href="#" onclick="Solve(8)">8</a></abc><abc><a href="#" onclick="Solve(9)">9</a></abc>
   <abc><a href="index.html">确认</a></abc>
   </body>
 </html>
