--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <h1>计算器
 </h1>
    <!-- 以此证明我还活着 -->
-  <abc><a href="#" onclick="Solve(1)">1</a></abc><abc><a href="#" onclick="Solve(2)">2</a></abc><abc><a href="#" onclick="Solve(3)">3</a></abc><abc><a href="#" onclick="Solve(4)">4</a></abc><abc><a href="#" onclick="Solve(5)">5</a></abc><abc><a href="#" onclick="Solve(6)">6</a></abc><abc><a href="#" onclick="Solve(7)">7</a></abc><abc><a href="#" onclick="Solve(8)">8</a></abc><abc><a href="#" onclick="Solve(9)">9</a></abc>
-  <abc><a href="#" onclick="Result()">确认</a></abc>
+  <h3><input value="1" type="button" onclick="Solve(1)"><input value="2" type="button" onclick="Solve(2)"><input value="3" type="button" onclick="Solve(3)"><input value="4" type="button" onclick="Solve(4)"><input value="5" type="button" onclick="Solve(5)"><input value="6" type="button" onclick="Solve(6)"><input value="7" type="button" onclick="Solve(7)"><input value="8" type="button" onclick="Solve(8)"><input value="9" type="button" onclick="Solve(9)"><input value="确认" type="button" onclick="Result()"></h3>
+  
     <h1 id="res"></h1>
   </body>
 </html>
