--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>计算器
 </h1>
    <!-- 以此证明我还活着 -->
-  <h3><input value="1" type="button" onclick="Solve(1);"><input value="2" type="button" onclick="Solve(2);"><input value="3" type="button" onclick="Solve(3);"><input value="4" type="button" onclick="Solve(4);"><input value="5" type="button" onclick="Solve(5);"><input value="6" type="button" onclick="Solve(6);"><input value="7" type="button" onclick="Solve(7);"><input value="8" type="button" onclick="Solve(8);"><input value="9" type="button" onclick="Solve(9);"><input value="确认" type="button" onclick="Result();"><input value="清除" type="button" onclick="Clear();"><input value="推格" type="button" onclick="Back();"></h3>
+  <h3><input value="1" type="button" onclick="Solve(1);"><input value="2" type="button" onclick="Solve(2);"><input value="3" type="button" onclick="Solve(3);"><input value="4" type="button" onclick="Solve(4);"><input value="5" type="button" onclick="Solve(5);"><input value="6" type="button" onclick="Solve(6);"><input value="7" type="button" onclick="Solve(7);"><input value="8" type="button" onclick="Solve(8);"><input value="9" type="button" onclick="Solve(9);"><input value="确认" type="button" onclick="Result();"><input value="清除" type="button" onclick="Clear();"><input value="退格" type="button" onclick="Back();"></h3>
   
     <input id="res" value="" type="text">
   </body>
