--- a/index.html
+++ b/index.html
@@ -12,9 +12,33 @@
 <body>
   <h1>计算器
 </h1>
-   <!-- 以此证明我还活着 -->
-  <h3><input value="1" type="button" onclick="Solve(1);"><input value="2" type="button" onclick="Solve(2);"><input value="3" type="button" onclick="Solve(3);"><input value="4" type="button" onclick="Solve(4);"><input value="5" type="button" onclick="Solve(5);"><input value="6" type="button" onclick="Solve(6);"><input value="7" type="button" onclick="Solve(7);"><input value="8" type="button" onclick="Solve(8);"><input value="9" type="button" onclick="Solve(9);"><input value="确认" type="button" onclick="Result();"><input value="清除" type="button" onclick="Clear();"><input value="退格" type="button" onclick="Back();"></h3>
-  
-    <input id="res" value="" type="text">
+   <div class="main">
+    <input type="text" id = 'res'>
+    <div class="btn">
+       <input type="button" value = 'C' onclick = "Clear()">
+       <input type="button" value = '%' onclick = "Solve('%')">
+       <input type="button" value = '←' onclick ="Back('←')">
+       <input type="button" value = '/' onclick = "Solve('/')">
+       <br>
+       <input type="button" value = '7' onclick = "Solve('7')">
+       <input type="button" value = '8' onclick = "Solve('8')">
+       <input type="button" value = '9' onclick = "Solve('9')">
+       <input type="button" value = 'x' onclick = "Solve('*')">
+       <br>
+       <input type="button" value = '4' onclick = "Solve('4')">
+       <input type="button" value = '5' onclick = "Solve('5')">
+       <input type="button" value = '6' onclick = "Solve('6')">
+       <input type="button" value = '-' onclick = "Solve('-')">
+       <br>
+       <input type="button" value = '1' onclick = "Solve('1')">
+       <input type="button" value = '2' onclick = "Solve('2')">
+       <input type="button" value = '3' onclick = "Solve('3')">
+       <input type="button" value = '+' onclick = "Solve('+')">
+       <br>
+       <input type="button" value = '00'onclick = "Solve('00')">
+       <input type="button" value = '0' onclick = "Solve('0')">
+       <input type="button" value = '.' onclick = "Solve('.')">
+       <input type="button" value = '=' onclick = "Result()">
+    </div>
   </body>
 </html>
